# CX11

./: .gitignore  CMakeLists.txt  README.md
plugin/: CMakeLists.txt
plugin/include/CX11Synth/: BinaryData.h  Envelope.h  Filter.h  LookAndFeel.h  NoiseGenerator.h  Oscillator.h  PluginEditor.h  PluginProcessor.h  Preset.h  RotaryKnob.h  Synth.h  Utils.h  Voice.h
plugin/source/: BinaryData.cpp  LookAndFeel.cpp  PluginEditor.cpp  PluginProcessor.cpp  RotaryKnob.cpp  Synth.cpp
test/: CMakeLists.txt
test/source/: AudioProcessorTest.cpp
